[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
authd = { path = "../authd" }
argh = "0.1.8"
opaque-ke = { git = "https://github.com/novifinancial/opaque-ke.git", features = ["argon2"] }
toml = "0.5"
rustls = "0.20"
tokio = "1.21"
tarpc = "0.30"
rpassword = "7.0"
anyhow = "1.0"
env_logger = "0.9"
zeroize = "1.5"