[package]
name = "authd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
libnss = "0.4"
reqwest = "*"
serde_cbor = "*"
tarpc = { version = "0.30", features = [ "full" ] }
tokio = "1.21"
anyhow = "1"
futures-util = "0.3"
tracing-subscriber = {version="0.3", features=["fmt", "env-filter"]}