[package]
name = "authd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
libnss = "0.4"
reqwest = "*"
serde_cbor = "*"
tarpc = { version = "0.30", features = [ "full" ] }
tokio = "1.21"
anyhow = "1"
futures-util = "0.3"
tracing-subscriber = {version="0.3", features=["fmt", "env-filter"]}
opaque-ke = { git = "https://github.com/novifinancial/opaque-ke.git", features = ["argon2"] }
argon2 = "0.4"
rand = "0.8"
argh = "0.1.8"
toml = "0.5"
dirs-next = "2"
rustls = "0.20"
tokio-rustls = "0.23"
shellexpand = "2.1"
stubborn-io = "0.3"
zeroize = "1.5"