[package]
name = "nss_cosiauth"
version = "0.1.0"
edition = "2021"

[lib]
name = "nss_cosiauth"
crate-type = [ "cdylib" ]

[dependencies]
libnss = "0.4.0"
libc = "*"
lazy_static = "*"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
authd = { path = "../authd" }
tarpc = "0.30"
futures = "0.3"